# ch-data-collector

./: .gitignore  README.md  pyproject.toml
data/: champions_name_map.json
data/master/: moves.json  pokemon.json
docs/: recording-guide.md
scripts/: analyze_allowlist.py  build_moves_from_pokedex.py  check_champions_names.py  check_fuzzy_match_equivalence.py  merge_results.py  probe_ocr.py
src/ch_data_collector/: __init__.py  classify.py  cli.py  extract.py  learnset.py  master_data.py  ocr.py  pipeline.py  pokemon_id.py  screen_layouts.py  type_icon.py
