[project]
name = "ch-data-collector"
version = "0.1.0"
description = "ポケモンチャンピオンズの技データを動画から半自動収集するツール"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "ycookiey", email = "70356861+ycookiey@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "easyocr>=1.7.2",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "questionary>=2.1.1",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
]

[project.scripts]
ch-data-collector = "ch_data_collector:main"

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
